style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: Roboto;
}

.no-highlight {
  user-select: none;
}

.hidden {
  opacity: 0;
}

.bookshelf {
  display: grid;
  margin-bottom: 2vh;
  margin-left: 3vw;
  background-image: url(./img/bookshelf.png);
  background-repeat: no-repeat;
  background-size: contain;
  width: calc(
    var(--default-bookshelf-width) * var(--bookshelf-shrink-constant)
  );
  height: calc(
    var(--default-bookshelf-height) * var(--bookshelf-shrink-constant)
  );

  grid-template: 7% 1fr 10% 1fr 10% 1fr 16% / 60%;
  justify-content: center;
  grid-template-areas:
    "."
    "shelf-one"
    "."
    "shelf-two"
    "."
    "shelf-three"
    ".";
}

.shelf-1,
.shelf-2,
.shelf-3 {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  align-content: end;
}

.shelf-1 {
  grid-area: shelf-one;
}

.shelf-2 {
  grid-area: shelf-two;
}

.shelf-3 {
  grid-area: shelf-three;
}

img[src="./img/book.png"] {
  transform: rotate(270deg);
  height: 100%;
  width: 100%;
}

img[src="./img/book.png"]:hover {
  opacity: 0.4;
  cursor: url("./img/remove.png"), auto;
}

:root {
  --book-pink: 90deg;
  --book-purple: 30deg;
  --book-red: 115deg;
  --book-green: 220deg;
  --book-cyan: 280deg;
  --book-blue: 330deg;
  --default-book-height: 793px;
  --default-book-width: 1280px;
  --default-bookshelf-height: 1920px;
  --default-bookshelf-width: 1832px;
  --bookshelf-shrink-constant: 0.55;
  --book-shrink-constant: 0.6;
}

.pink-book {
  filter: hue-rotate(var(--book-pink));
}

.purple-book {
  filter: hue-rotate(var(--book-purple));
}

.red-book {
  filter: hue-rotate(var(--book-red));
}

.green-book {
  filter: hue-rotate(var(--book-green));
}

.cyan-book {
  filter: hue-rotate(var(--book-cyan));
}

.blue-book {
  filter: hue-rotate(var(--book-blue));
}

.book {
  position: absolute;
  margin: auto auto auto 0;
  height: calc(var(--default-book-height) * var(--book-shrink-constant));
  width: calc(var(--default-book-width) * var(--book-shrink-constant));
  background-image: url(./img/book-open.png);
  background-size: contain;
  display: grid;
  grid-template-columns: 10% 1fr 5% 1fr 10%;
  grid-template-areas: ". page1 . page2 .";
  align-items: start;
  font-size: 100%;
}

.book.initial-open {
  transition: all 2s ease-in-out;
  transform: scale(0);
  left: calc(
    50vw - (var(--default-book-width) * var(--book-shrink-constant) / 2)
  );
  top: calc(
    50vh - (var(--default-book-height) * var(--book-shrink-constant) / 2)
  );
}
.book.transition-open {
  transform: scale(1.1);
  left: calc(
    50vw - (var(--default-book-width) * var(--book-shrink-constant) / 2)
  );
}

.book.initial {
  transform: scale(0.9);
  left: 100vw;
  transition: all 2s ease-in-out;
  top: calc(
    50vh - (var(--default-book-height) * var(--book-shrink-constant) / 2)
  );
}

.book.transition {
  transform: scale(1.1);
  left: calc(
    50vw - (var(--default-book-width) * var(--book-shrink-constant) / 2)
  );
}

.book.transition-two {
  transform: scale(0);
  left: 10vw;
}

.page {
  margin-top: 10%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 85%;
}

.page-one {
  grid-area: page1;
}

.page-two {
  grid-area: page2;
}

body {
  background-color: #c4e6e8;
  background-image: url(/img/background.jpg);
  background-size: 100vw 50%;
  background-position: bottom;
  background-repeat: no-repeat;
  position: relative;
  display: flex;
  justify-content: flex-end;
  align-items: flex-start;
  height: 100vh;
  flex-direction: column;
  overflow: hidden;
}

button {
  margin-left: 14vw;
  margin-bottom: 5vh;
  border: none;
  padding: 0.5em;
  border-radius: 20px;
  font-size: 2rem;
  background-color: rgba(255, 0, 0, 0);
}

.animate-dialog {
  left: 50vw;
}

dialog {
  z-index: 2;
  transition: all 2s ease-in-out;
  background-color: rgba(255, 0, 0, 0);
  position: absolute;
  height: calc(var(--default-book-height) * var(--book-shrink-constant));
  width: calc(var(--default-book-width) * var(--book-shrink-constant));
  background-image: url(./img/book-open.png);
  background-size: contain;
  display: grid;
  grid-template-columns: repeat(2, 40%);
  grid-template-rows: repeat(6, 1fr);
  grid-template-areas:
    "create-book-title     ."
    "create-input-title    create-input-read"
    "book-title-input      book-read-input"
    "create-input-pages    create-input-author"
    "book-page-count-input book-author-input"
    "create-book           create-book";
  justify-content: center;
  font-family: "Kalam", cursive;
  font-weight: 300;
  font-style: normal;
  align-items: start;
  font-size: 100%;
  border: none;
  left: 100vw;
  bottom: 40vh;
  border-radius: 20px;
  gap: 15px;
}

.add {
  transition: all 0.4s ease-in-out;
  position: absolute;
  top: 5vh;
  left: 5vw;
  background-image: url(./img/wood.jpg);
  background-size: cover;
  position: absolute;
  font-weight: bold;
  color: white;
  text-shadow: 4px 0px 5px black;
}

.switch {
  display: flex;
  flex-direction: row;
  position: absolute;
  display: inline-block;
  width: 140px;
  height: 34px;
  top: 6.3vh;
  left: 40vw;
  background-image: url(./img/wood.jpg);
  background-size: cover;
  position: absolute;
  font-weight: bold;
  color: white;
  text-shadow: 4px 0px 5px black;
}

button {
  transition: all 0.2s ease;
}

button:hover {
  padding: 20px;
  transform: scale(1.1);
}

.create-book-title {
  grid-area: create-book-title;
}
.create-input-title {
  grid-area: create-input-title;
}
.book-title-input {
  grid-area: book-title-input;
}
.create-input-pages {
  grid-area: create-input-pages;
}
.book-page-count-input {
  grid-area: book-page-count-input;
}
.create-input-read {
  grid-area: create-input-read;
}
.book-read-input {
  grid-area: book-read-input;
}
.create-input-author {
  grid-area: create-input-author;
}
.book-author-input {
  grid-area: book-author-input;
}
.create-book {
  grid-area: create-book;
}

dialog > label,
dialog > input {
  font-size: 1.2rem;
}

dialog > input {
  border: none;
  background-color: rgba(255, 0, 0, 0);
  transition: all 0.4s ease-in-out;
}

dialog > button[autofocus] {
  color: red;
  font-weight: bold;
  position: absolute;
  right: 10%;
  top: 5%;
  width: min-content;
  height: min-content;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0px;
}

input:hover {
  font-size: 1.4rem;
}

input:focus {
  font-size: 1.4rem;
  border: none;
  outline: none;
}

button[autofocus]:hover {
  transform: scale(1.2);
}

.create-book-title {
  font-weight: bold;
  border-bottom: 2px solid black;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  transform: scale(2);
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url(./img/wood.jpg);
  background-size: cover;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  box-shadow: 0px 0px 4px black;
}

/* input:checked + .slider {
  background-color: #2196f3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196f3;
} */

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
  margin: auto;
}

.slider p {
  margin-left: 75px;
  font-size: 0.9rem;
  text-shadow: 2px 2px 3px black;
}

